      John Nash.
      \code{nls(*, trace=TRUE)} now also shows the convergence criterion.

      \item Numeric differentiation \code{numericDeriv()} gets new optional
      arguments \code{eps} and \code{central}, the latter for taking
      central divided differences.  That can be activated for \code{nls()}
      via \code{nls.control(nDcentral = TRUE)}.

      \item \code{bquote()} can now splice expression vectors with
      attributes. This makes it possible to splice the result of
      \code{parse(keep.source = TRUE)}. Report and patch provided by
      Lionel Henry in \PR{17869}.
    }
  }

  \subsection{GRAPHICS}{
    \itemize{
      \item The graphics engine version, \code{R_GE_version}, has been
      bumped to 13 and so packages that provide graphics devices should
      be reinstalled.

      \item Graphics devices can now specify \code{canClip =
        NA_LOGICAL}, in which case the graphics engine will never
      perform any clipping of output itself.

      The clipping that the graphics engine does perform (for both
      \code{canClip = TRUE} and \code{canClip = FALSE}) has been
      improved to avoid producing unnecessary artifacts in clipped
      output.

      \item The \pkg{grid} package now allows \code{gpar(fill)} to be
      a \code{linearGradient()}, a \code{radialGradient()}, or a
      \code{pattern()}.  The \code{viewport(clip)} can now also be
      a grob, which defines a clipping path, and there is a new
      \code{viewport(mask)} that can also be a grob, which defines
      a mask.

      These new features are only supported (so far) on Cairo graphics
      devices and the \code{pdf()} device.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The \emph{standalone} \file{libRmath} math library and \R's C
      API now provide \code{log1pexp()} again as documented, and gain
      \code{log1mexp()}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{