@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2020-10-31 r79390) -- "Unsuffered Consequences"
+R Under development (unstable) (2020-11-03 r79399) -- "Unsuffered Consequences"
 Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -100,10 +100,10 @@ Nonlinear regression model
 > # using the plinear algorithm
 > fm2 <- nls(demand ~ (1-exp(-exp(lrc)*Time)), data = BOD,
 +    start = c(lrc = log(.35)), algorithm = "plinear", trace = TRUE)
-      32.946 (7.093411e-01): par = (-1.0498 22.126)
-      25.992 (1.292894e-02): par = (-0.62572 19.103)
-       25.99 (2.133335e-04): par = (-0.6327 19.142)
-       25.99 (3.546157e-06): par = (-0.63282 19.143)
+32.946    (7.093411e-01): par = (-1.0498 22.126)
+25.992    (1.292894e-02): par = (-0.62572 19.103)
+25.990    (2.133335e-04): par = (-0.6327 19.142)
+25.990    (3.546157e-06): par = (-0.63282 19.143)
 > # using a self-starting model
 > fm3 <- nls(demand ~ SSasympOrig(Time, A, lrc), data = BOD)
 > summary(fm3)
