@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2020-11-02 r79395) -- "Unsuffered Consequences"
+R Under development (unstable) (2020-11-03 r79399) -- "Unsuffered Consequences"
 Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1243,6 +1243,52 @@ Residual standard error: 0.04103 on 7 degrees of freedom
 >   ySS <- SSbiexp(xx, 3.5, log(4), 1.5, log(1))
 >   ##                      ---          ---
 >   stopifnot(all.equal(y1+y2, ySS, tolerance = 1e-15))
+> 
+> ## Show a no-noise example
+> datN <- data.frame(time = (0:600)/64)
+> datN$conc <- predict(fm1, newdata=datN)
+> plot(conc ~ time, data=datN) # perfect, no noise
+> ## IGNORE_RDIFF_BEGIN
+> ## Fails by default (scaleOffset=0):
+> ## Not run: 
+> ##D         nls(conc ~ SSbiexp(time, A1, lrc1, A2, lrc2), data = datN, trace=TRUE)
+> ## End(Not run)
+> ## Don't show: 
+> try( # maxiter=10: store less garbage
++         nls(conc ~ SSbiexp(time, A1, lrc1, A2, lrc2), data = datN,
++             trace=TRUE, control = list(maxiter = 10)) )
+0.01722077  (5.338963e+02): par = (0.6168807 -1.783839 2.050204 0.2004597)
+3.308944e-06 (1.128925e+04): par = (0.5798674 -1.784335 2.028943 0.1920502)
+2.571093e-11 (7.684396e+06): par = (0.5793882 -1.78778 2.029276 0.1915479)
+1.633875e-23 (4.263284e+03): par = (0.5793887 -1.787785 2.029277 0.1915474)
+5.883240e-29 (1.320900e+01): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.292713e-29 (1.705440e+00): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.292713e-29 (1.705440e+00): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.292713e-29 (1.705440e+00): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.292713e-29 (1.705440e+00): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.292713e-29 (1.705440e+00): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.292713e-29 (1.705440e+00): par = (0.5793887 -1.787785 2.029277 0.1915474)
+Error in nls(y ~ cbind(exp(-exp(lrc1) * x), exp(-exp(lrc2) * x)), data = xy,  : 
+  number of iterations exceeded maximum of 10
+> ## End(Don't show)
+> fmX1 <- nls(conc ~ SSbiexp(time, A1, lrc1, A2, lrc2), data = datN, control = list(scaleOffset=1))
+> fmX  <- nls(conc ~ SSbiexp(time, A1, lrc1, A2, lrc2), data = datN,
++            control = list(scaleOffset=1, printEval=TRUE, tol=1e-11, nDcentral=TRUE), trace=TRUE)
+0.01722077    (6.548719e-02): par = (0.6168807 -1.783839 2.050204 0.2004597)
+  It.   1, fac=           1, eval (no.,total): ( 1,  1): new dev = 3.30894e-06
+3.308942e-06  (9.080047e-04): par = (0.5798674 -1.784335 2.028943 0.1920502)
+  It.   2, fac=           1, eval (no.,total): ( 1,  2): new dev = 2.57108e-11
+2.571082e-11  (2.531056e-06): par = (0.5793882 -1.78778 2.029276 0.1915479)
+  It.   3, fac=           1, eval (no.,total): ( 1,  3): new dev = 1.66922e-23
+1.669220e-23  (2.039390e-12): par = (0.5793887 -1.787785 2.029277 0.1915474)
+1.670353e-23  (1.672696e-13): par = (2.029277 0.5793887 0.1915474 -1.787785)
+> all.equal(coef(fm1), coef(fmX1), tol=0) # ... rel.diff.: 1.57e-6
+[1] "Mean relative difference: 1.574125e-06"
+> all.equal(coef(fm1), coef(fmX),  tol=0) # ... rel.diff.: 1.03e-12
+[1] "Mean relative difference: 1.031784e-12"
+> ## IGNORE_RDIFF_END
+> stopifnot(all.equal(coef(fm1), coef(fmX1), tol = 6e-6),
++           all.equal(coef(fm1), coef(fmX ), tol = 1e-11))
 > 
 > 
 > 
@@ -11110,18 +11156,18 @@ Warning in nls(formula = y ~ Const + A * exp(B * x), algorithm = "default",  :
   No starting values specified for some parameters.
 Initializing ‘Const’, ‘A’, ‘B’ to '1.'.
 Consider specifying 'start' or using a selfStart model
-1017460.306   (4.151743e+02): par = (1 1 1)
-758164.7503   (2.344683e+02): par = (13.42031396 1.961485 0.05947543745)
-269506.3537   (3.226620e+02): par = (51.75719817 -13.09155958 0.8428607712)
-68969.21891   (1.033820e+02): par = (76.0006985 -1.93522675 1.0190858)
-633.3672224   (1.294814e+00): par = (100.3761515 8.624648408 5.104490252)
-151.440017    (9.388771e+00): par = (100.6344391 4.913490999 0.2849209664)
-53.08739445   (7.238414e+00): par = (100.6830407 6.899303393 0.4637755095)
-1.344478582   (5.971663e-01): par = (100.0368306 9.897714144 0.5169294926)
-0.9908415908  (1.546514e-02): par = (100.0300625 9.9144191 0.5023516843)
-0.9906046057  (1.836907e-05): par = (100.0288724 9.916224018 0.5025207336)
-0.9906046054  (9.943389e-08): par = (100.028875 9.916228366 0.50252165)
-0.9906046054  (4.996813e-08): par = (100.028875 9.916228377 0.5025216525)
+1017460.306    (4.151743e+02): par = (1 1 1)
+758164.7503    (2.344683e+02): par = (13.42031396 1.961485 0.05947543745)
+269506.3537    (3.226620e+02): par = (51.75719817 -13.09155958 0.8428607712)
+68969.21891    (1.033820e+02): par = (76.0006985 -1.93522675 1.0190858)
+633.3672224    (1.294814e+00): par = (100.3761515 8.624648408 5.104490252)
+151.4400170    (9.388771e+00): par = (100.6344391 4.913490999 0.2849209664)
+53.08739445    (7.238414e+00): par = (100.6830407 6.899303393 0.4637755095)
+1.344478582    (5.971663e-01): par = (100.0368306 9.897714144 0.5169294926)
+0.9908415908   (1.546514e-02): par = (100.0300625 9.9144191 0.5023516843)
+0.9906046057   (1.836907e-05): par = (100.0288724 9.916224018 0.5025207336)
+0.9906046054   (9.943389e-08): par = (100.028875 9.916228366 0.50252165)
+0.9906046054   (4.996813e-08): par = (100.028875 9.916228377 0.5025216525)
 Nonlinear regression model
   model: y ~ Const + A * exp(B * x)
    data: parent.frame()
@@ -19006,7 +19052,7 @@ Number of Fisher Scoring iterations: 6
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  7.517 0.229 7.813 0 0 
+Time elapsed:  5.263 1.148 6.597 0 0 
 > grDevices::dev.off()
 null device 
           1 
