@@ -127,6 +127,10 @@
       central divided differences.  That can be activated for \code{nls()}
       via \code{nls.control(nDcentral = TRUE)}.
 
+      \item \code{nls()} now passes the \code{trace} and \code{control}
+      arguments to \code{getInitial()}, notably for all selfStart models,
+      so these can also be fit in zero-noise situations via a \code{scaleOffset}.
+
       \item \code{bquote()} can now splice expression vectors with
       attributes. This makes it possible to splice the result of
       \code{parse(keep.source = TRUE)}. Report and patch provided by
